force-app/main/default/objects/RTV_DEF_Expected_Result__c/RTV_DEF_Expected_Result__c.object-meta.xml
<CustomObject>
    <label>RTV DEF Expected Result</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>RTV DEF Expected Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV DEF Expected Result</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>