force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/Action_after_return__c.field-meta.xml
<CustomField>
    <fullName>Action_after_return__c</fullName>
    <label>Action after return</label>
    <length>10</length>
    <type>Text</type>
</CustomField>