force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/Estimated_claim_from_factory__c.field-meta.xml
<CustomField>
    <fullName>Estimated_claim_from_factory__c</fullName>
    <label>Estimated claim from factory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>