force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/Landing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landing_Cost__c</fullName>
    <description>Landing Cost(FOB+Freight/Duty)</description>
    <inlineHelpText>FOB+Freight/Duty</inlineHelpText>
    <label>Landing Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>