force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/No_of_Target_return_SKU__c.field-meta.xml
<CustomField>
    <fullName>No_of_Target_return_SKU__c</fullName>
    <label>No. of Target return SKU#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>