force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/Original_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Wholesale_Price__c</fullName>
    <description>Original Wholesale Price(After Discount)</description>
    <inlineHelpText>After Discount</inlineHelpText>
    <label>Original Wholesale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>