force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/P_L_Impact__c.field-meta.xml
<CustomField>
    <fullName>P_L_Impact__c</fullName>
    <label>P/L Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>