force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/Return_Product_offer_season__c.field-meta.xml
<CustomField>
    <fullName>Return_Product_offer_season__c</fullName>
    <label>Return Product offer season</label>
    <length>30</length>
    <type>Text</type>
</CustomField>