force-app/main/default/objects/RTV_DEF_Expected_Result__c/fields/RTV_DEF_Program__c.field-meta.xml
<CustomField>
    <fullName>RTV_DEF_Program__c</fullName>
    <label>RTV DEF Program</label>
    <referenceTo>RTV_Defective__c</referenceTo>
    <relationshipLabel>RTV DEF Expected Result</relationshipLabel>
    <relationshipName>RTV_DEF_Expected_Result</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>